--- a/FEB-P005/index.html
+++ b/FEB-P005/index.html
@@ -9,6 +9,9 @@
 	.auto-style1 {
 		border-width: 0px;
 	}
+	.auto-style2 {
+	text-align: left;
+}
 	</style>
   </head>
   <body>
@@ -19,10 +22,10 @@
       <div class="menu">
         <h3>MENU</h3>
         <ul>
-          <li><a href="http://www.uesc.br/asplan/">Assesoria de Planejamento</a></li>
-          <li><a href="http://www.uesc.br/ascom/">Assessoria de Comunicação</a></li>
-          <li><a href="http://www.uesc.br/arint/">Assessoria de Relações Internacionais</a></li>
-          <li>
+          <li class="auto-style2"><a href="http://www.uesc.br/asplan/">Assesoria de Planejamento</a></li>
+          <li class="auto-style2"><a href="http://www.uesc.br/ascom/">Assessoria de Comunicação</a></li>
+          <li class="auto-style2"><a href="http://www.uesc.br/arint/">Assessoria de Relações Internacionais</a></li>
+          <li class="auto-style2">
 		  <a href="http://www.uesc.br/proad/index.php?item=conteudo_gera_requerimento_academico.php" target="_blank">Protocolo Digital</a></li>
         </ul>
       </div>
@@ -57,6 +60,13 @@
       </div>
       <div class="servicos">
         <h3>SERVIÇOS</h3>
+        <ul>
+          <li class="auto-style2"><a href="http://www.uesc.br/biblioteca/">Biblioteca</a></li>
+          <li class="auto-style2"><a href="http://www.uesc.br/auditorios/">Auditório</a></li>
+          <li class="auto-style2"><a href="https://www.comprasnet.ba.gov.br/">Licitações</a></li>
+          <li class="auto-style2">
+		  <a href="https://www.prograd.uesc.br/PortalSagres/" target="_blank">Portal Sagres</a></li>
+        </ul>
       </div>
       <div class="resultados">
         <h3>RESULTADOS</h3>
